be ocd and fix line spacing in assignments

--- a/styles/style.styl
+++ b/styles/style.styl
@@ -385,8 +385,13 @@ body > section
 
     .title
       width: 250px
+
+      h1
+        line-height: 1.6em
+
     .deadline
       width: 200px
+
     .files
       width: 100px
 
